final: Abgabe 1